# wamserver

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.github/workflows/: rust-ci.yml
entity/: Cargo.toml
entity/src/: message.rs  mod.rs  prelude.rs  user.rs
frontend/: .env.development  .env.production  .npmrc  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  config.js
frontend/src/components/: Gatling.jsx  KafkaParams.jsx  MessageRateChart.jsx  Messages.jsx  Users.jsx  Vehicles.jsx
frontend/src/contexts/: WebSocketContext.jsx
frontend/src/test/: Gatling.test.jsx  KafkaParams.test.jsx  MessageRateChart.test.jsx  Messages.test.jsx  Users.test.jsx  Vehicles.test.jsx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250730_084451_add_user.rs  m20250730_090031_add_user_id.rs
proto/: vehicles.proto
src/: database.rs  main.rs  routes.rs
src/database/: mod.rs  requests.rs
src/messaging/: kafka.rs  mod.rs  sytral.rs  websocket.rs
src/routes/: mod.rs  pages.rs  parameters.rs  services.rs  socket.rs  spa.rs
