[package]
name = "wamserver"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
sea-orm = "1.1.14"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
entity = { path = "entity" }
migration = { path = "migration" }
dotenvy = "0.15.7"
axum-macros = "0.5.0"
serde = "1.0.219"
